tests/ui/panic-handler/panic-handler-duplicate.stderr
error[E0152]: found duplicate lang item `panic_impl`
  --> $DIR/panic-handler-duplicate.rs:15:1
   |
LL | / fn panic2(info: &PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^
   |
note: the lang item is first defined here
  --> $DIR/panic-handler-duplicate.rs:10:1
   |
LL | / fn panic(info: &PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0152`.
